# algos-task-6

./: CMakeLists.txt  tests.cpp
.github/workflows/: CI.yml
